--- a/brokernetwork/pom.xml
+++ b/brokernetwork/pom.xml
@@ -6,11 +6,11 @@
 
 	<parent>
 		<groupId>com.empired.tests</groupId>
-		<artifactId>EmpiredActiveMQTests</artifactId>
+		<artifactId>activemqtests</artifactId>
 		<version>1.0-SNAPSHOT</version>
 	</parent>
 
-	<groupId>com.empired.tests</groupId>
+	<groupId>com.empired.tests.brokernetwork</groupId>
 	<artifactId>brokernetwork</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
