--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.empired.tests</groupId>
-	<artifactId>EmpiredActiveMQTests</artifactId>
+	<artifactId>activemqtests</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
@@ -14,9 +14,11 @@
 
 	<modules>
 		<module>brokernetwork</module>
+		<module>queuedeltadisplay</module>
 	</modules>
 
 	<properties>
+		<java.min.version>1.7</java.min.version>
 		<activemq-version>5.11.1</activemq-version>
 		<junit-version>4.12</junit-version>
 		<log4j-version>2.3</log4j-version>
