--- a/brokernetwork/pom.xml
+++ b/brokernetwork/pom.xml
@@ -12,7 +12,6 @@
 
 	<groupId>com.empired.tests.brokernetwork</groupId>
 	<artifactId>brokernetwork</artifactId>
-	<version>1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>Test Suite for Network of Brokers</name>
@@ -38,6 +37,9 @@
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-core</artifactId>
 		</dependency>
+
+
+
 	</dependencies>
 
 	<build>
@@ -46,6 +48,11 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>2.6</version>
 			</plugin>
 		</plugins>
 	</build>
